Fix chat container width on mobile

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -19,7 +19,8 @@
 
 .chat-container {
     position: absolute;
-    width: 100%;
+    left: 0;
+    width: 100vw;
     height: 100%;
     transform: translateX(100%);
     transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -45,6 +46,8 @@
     }
     .chat-container {
         position: relative;
+        left: unset;
+        width: 100%;
         transform: none !important;
     }
 }
